--- a/indexGUI.html
+++ b/indexGUI.html
@@ -5,19 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anirudh Roy - Portfolio (GUI)</title>
     <link rel="stylesheet" href="stylesGUI.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
-<body class="dark-mode">
-    <nav>
-        <button id="cli-switch">Switch to CLI</button>
-        <label class="theme-switch" for="checkbox">
-            <input type="checkbox" id="checkbox" />
-            <div class="slider round"></div>
-        </label>
-    </nav>
-    <main>
-        <h1>Anirudh Roy - Portfolio</h1>
-        <p>This is the GUI version of my portfolio. It's currently under construction.</p>
+<body>
+    <main class="container">
+            <div class="item item-1">
+            </div>
+            <div class="item item-2">2</div>
+            <div class="item item-3">3</div>
+            <div class="item item-4">4</div>
+            <div class="item item-5">5</div>
+            <div class="item item-6">6</div>
+            <div class="item item-7">7</div>
+            <div class="item item-8">8</div>
+            <div class="item item-9">9</div>
+            <div class="item item-10">10</div>
+            <div class="item item-11">11</div>
     </main>
     <script src="scriptGUI.js"></script>
 </body>
 </html>
+
