--- a/indexGUI.html
+++ b/indexGUI.html
@@ -10,17 +10,58 @@
 <body>
     <main class="container">
             <div class="item item-1">
+                <h3>Welcome</h3>
+                <p>I'm Anirudh, an aspiring software developer</p>
+                <div class="site-buttons">
+                <a href="">
+                    <button type="button">GitHub</button>
+                </a>
+                <a href="">
+                    <button type="button">LinkedIn</button>
+                </a>
+                <a href="">
+                    <button type="button">Something</button>
+                </a>
+                </div>
             </div>
-            <div class="item item-2">2</div>
-            <div class="item item-3">3</div>
-            <div class="item item-4">4</div>
-            <div class="item item-5">5</div>
-            <div class="item item-6">6</div>
-            <div class="item item-7">7</div>
-            <div class="item item-8">8</div>
-            <div class="item item-9">9</div>
-            <div class="item item-10">10</div>
-            <div class="item item-11">11</div>
+            <div class="item item-2">
+                <h3>About me</h3>
+                <p>Fill the about me here</p>
+            </div>
+            <div class="item item-3">
+                <h3>Contact me</h3>
+                <p>Contact me details</p>
+            </div>
+            <div class="item item-4">
+                <h3>Local time here</h3>
+            </div>
+            <div class="item item-5">
+                <a href="your-link-here" style="display: block; height: 100%; color: inherit; text-decoration: none;">
+                    <h3>Projects</h3>
+                </a>
+            </div>
+            <div class="item item-6">
+                <a href="your-link-here" style="display: block; height: 100%; color: inherit; text-decoration: none;">
+                    <h3>Link to app</h3>
+                </a>
+            </div>
+            <div class="item item-7">
+                7
+            </div>
+            <div class="item item-8">
+                <h3>Work experience</h3>
+            </div>
+            <div class="item item-9">
+                <h3>Color picker for border</h3>
+            </div>
+            <div class="item item-10">
+                <a href="your-link-here" style="display: block; height: 100%; color: inherit; text-decoration: none;">
+                    <h3>Discord bot</h3>
+                </a>
+            </div>
+            <div class="item item-11">
+                <h3>Designed by ANirudh Roy 2024</h3>
+            </div>
     </main>
     <script src="scriptGUI.js"></script>
 </body>
