Added light/dark slider on GUI site

--- a/indexGUI.html
+++ b/indexGUI.html
@@ -7,30 +7,39 @@
     <link rel="stylesheet" href="stylesGUI.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
-<body>
+<body class="dark-mode">
+    <label class="switch">
+        <input type="checkbox" id="modeSwitch" onclick="toggleMode()">
+        <span class="slider"></span>
+    </label>
+
     <main class="container">
-            <div class="item item-1">
-                <h3>Welcome</h3>
-                <p>I'm Anirudh, an aspiring software developer</p>
-                <div class="site-buttons">
-                <a href="">
-                    <button type="button">GitHub</button>
+
+<div class="item item-1">
+            <h3>Welcome</h3>
+            <p>I'm Anirudh, an aspiring software developer</p>
+            <div class="site-buttons">
+                <a href="https://github.com/royanirudd" target="_blank">
+                    <button type="button"><i class="fab fa-github"></i> </button>
                 </a>
-                <a href="">
-                    <button type="button">LinkedIn</button>
+                <a href="https://www.linkedin.com/in/anirudh-roy1/" target="_blank">
+                    <button type="button"><i class="fab fa-linkedin"></i> </button>
                 </a>
-                <a href="">
-                    <button type="button">Something</button>
+                <a href="index.html" >
+                    <button type="button"><i class="fas fa-terminal"></i> </button>
                 </a>
                 </div>
             </div>
+ 
             <div class="item item-2">
                 <h3>About me</h3>
                 <p>Fill the about me here</p>
             </div>
             <div class="item item-3">
                 <h3>Contact me</h3>
-                <p>Contact me details</p>
+                <a href="" target="_blank">Github</a>
+                <a href="" target="_blank">LinkedIn</a>
+                <p>Mobile: <span id="contactNoLink">+91 8050581848</span></p>
             </div>
             <div class="item item-4">
                 <h3>Local time here</h3>
@@ -52,8 +61,15 @@
                 <h3>Work experience</h3>
             </div>
             <div class="item item-9">
-                <h3>Color picker for border</h3>
+                <div class="color-picker">
+                    <button class="color-btn" style="background-color: red;" onclick="changeBorderColor('red')"></button>
+                    <button class="color-btn" style="background-color: green;" onclick="changeBorderColor('green')"></button>
+                    <button class="color-btn" style="background-color: blue;" onclick="changeBorderColor('blue')"></button>
+                    <button class="color-btn" style="background-color: purple;" onclick="changeBorderColor('purple')"></button>
+                    <button class="color-btn" style="background-color: yellow;" onclick="changeBorderColor('yellow')"></button>
+                </div>
             </div>
+
             <div class="item item-10">
                 <a href="your-link-here" style="display: block; height: 100%; color: inherit; text-decoration: none;">
                     <h3>Discord bot</h3>
