Added svg, fixed light mode, QoL changes

--- a/indexGUI.html
+++ b/indexGUI.html
@@ -6,6 +6,10 @@
     <title>Anirudh Roy - Portfolio (GUI)</title>
     <link rel="stylesheet" href="stylesGUI.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.14/lottie.min.js"></script>
 </head>
 <body class="dark-mode">
     <label class="switch">
@@ -20,30 +24,60 @@
             <p>I'm Anirudh, an aspiring software developer</p>
             <div class="site-buttons">
                 <a href="https://github.com/royanirudd" target="_blank">
-                    <button type="button"><i class="fab fa-github"></i> </button>
+                    <button type="button" class="social-button github"><i class="fab fa-github"></i> </button>
                 </a>
                 <a href="https://www.linkedin.com/in/anirudh-roy1/" target="_blank">
-                    <button type="button"><i class="fab fa-linkedin"></i> </button>
+                    <button type="button" class="social-button linkedin"><i class="fab fa-linkedin"></i> </button>
                 </a>
                 <a href="index.html" >
-                    <button type="button"><i class="fas fa-terminal"></i> </button>
+                    <button type="button" class="social-button terminal"><i class="fas fa-terminal"></i> </button>
                 </a>
                 </div>
             </div>
  
             <div class="item item-2">
                 <h3>About me</h3>
-                <p>Fill the about me here</p>
+                <p>
+                    Hi, I'm Anirudh Roy, a recent graduate with a degree in Maths, Statistics, and Computer Science, based in Pune, MH, India.
+                </p>
+                <p>
+My skill set includes a diverse range of tools and technologies:
+                <p>
+    Programming Languages: JavaScript, Python, Java, C
+    Web Technologies: HTML, CSS, React, Node.js
+    Databases: MySQL, MongoDB, MS SQL Server
+    Tools: Git, Docker, AWS
+                </p>
+                <p>
+I'm deeply passionate about game design and video games, which fuels my enthusiasm for creating engaging and interactive experiences. Outside of tech, I enjoy playing basketball and staying active.
+                </p>
+                <p>
+While I have a set of preferred tools, I'm always open to exploring the best option for each project, ensuring that the chosen solution is the most effective one. My primary goal is to find the right solution for each challenge I encounter.
+                </p>
             </div>
             <div class="item item-3">
                 <h3>Contact me</h3>
-                <a href="" target="_blank">Github</a>
-                <a href="" target="_blank">LinkedIn</a>
-                <p>Mobile: <span id="contactNoLink">+91 8050581848</span></p>
+                <ul> 
+                    <li>
+                        <a href="" target="_blank">Github</a>
+                    </li>
+                    <li>
+                        <a href="" target="_blank">LinkedIn</a>
+                    </li>
+                    <li>
+                        <p>Mobile: <span id="contactNoLink">+91 8050581848</span></p>
+                    </li>
+                </ul>
             </div>
             <div class="item item-4">
-                <h3>Local time here</h3>
+                <video autoplay loop muted playsinline class="animation-video">
+                <source src="anim.webm" type="video/webm">
+                Your browser does not support the video tag.
+                </video>
             </div>
+ 
+ 
+
             <div class="item item-5">
                 <a href="your-link-here" style="display: block; height: 100%; color: inherit; text-decoration: none;">
                     <h3>Projects</h3>
