Changed welcome prompt

--- a/indexGUI.html
+++ b/indexGUI.html
@@ -20,8 +20,10 @@
     <main class="container">
 
 <div class="item item-1">
-            <h3>Welcome</h3>
-            <p>I'm Anirudh, an aspiring software developer</p>
+            <h3 style="margin: 0; padding: 0; text-align: left;">Welcome</h3>
+                <p>Through my academic projects and hands-on learning, I’ve tackled challenges in automation, logistics, employee management, and web development. My work experience, though early in my career, demonstrates a strong foundation in solving real-world problems with innovative solutions.
+                </p> <p>
+Whether it's optimizing processes or building responsive web applications, I am eager to bring my skills to a professional setting. If you're looking for someone who is passionate, driven, and ready to contribute from day one—let's connect and make an impact together. </p>
             <div class="site-buttons">
                 <a href="https://github.com/royanirudd" target="_blank">
                     <button type="button" class="social-button github"><i class="fab fa-github"></i> </button>
@@ -67,6 +69,9 @@ While I have a set of preferred tools, I'm always open to exploring the best opt
                     <li>
                         <p>Mobile: <span id="contactNoLink">+91 8050581848</span></p>
                     </li>
+                    <li>
+                        <p>Email: <span id="contactNoLink">aniruddroy704@gmail.com</span></p>
+                    </li>
                 </ul>
             </div>
             <div class="item item-4">
@@ -79,17 +84,20 @@ While I have a set of preferred tools, I'm always open to exploring the best opt
  
 
             <div class="item item-5">
-                <a href="your-link-here" style="display: block; height: 100%; color: inherit; text-decoration: none;">
+                <a href="your-link-here" target="_blank" style="display: block; height: 100%; color: inherit; text-decoration: none;">
                     <h3>Projects</h3>
                 </a>
             </div>
             <div class="item item-6">
-                <a href="your-link-here" style="display: block; height: 100%; color: inherit; text-decoration: none;">
+                <a href="your-link-here" target="_blank" style="display: block; height: 100%; color: inherit; text-decoration: none;">
                     <h3>Link to app</h3>
                 </a>
             </div>
             <div class="item item-7">
-                7
+                <video autoplay loop muted playsinline class="animation-video">
+                <source src="anim2.webm" type="video/webm">
+                Your browser does not support the video tag.
+                </video>
             </div>
             <div class="item item-8">
                 <h3>Work experience</h3>
@@ -105,12 +113,12 @@ While I have a set of preferred tools, I'm always open to exploring the best opt
             </div>
 
             <div class="item item-10">
-                <a href="your-link-here" style="display: block; height: 100%; color: inherit; text-decoration: none;">
+                <a href="your-link-here" target="_blank"style="display: block; height: 100%; color: inherit; text-decoration: none;">
                     <h3>Discord bot</h3>
                 </a>
             </div>
-            <div class="item item-11">
-                <h3>Designed by ANirudh Roy 2024</h3>
+            <div class="item item-11" style="font-size: 14px;">
+                <h3>&#169;Designed by Anirudh Roy 2024</h3>
             </div>
     </main>
     <script src="scriptGUI.js"></script>
