Added item-12 for image

--- a/indexGUI.html
+++ b/indexGUI.html
@@ -37,6 +37,9 @@ Whether it's optimizing processes or building responsive web applications, I am 
                 </div>
             </div>
  
+            <div class="item item-12">
+
+            </div>
             <div class="item item-2">
                 <h3>About me</h3>
                 <p>
@@ -76,7 +79,7 @@ While I have a set of preferred tools, I'm always open to exploring the best opt
             </div>
             <div class="item item-4">
                 <video autoplay loop muted playsinline class="animation-video">
-                <source src="anim.webm" type="video/webm">
+                <source src="assets/anim.webm" type="video/webm">
                 Your browser does not support the video tag.
                 </video>
             </div>
@@ -95,7 +98,7 @@ While I have a set of preferred tools, I'm always open to exploring the best opt
             </div>
             <div class="item item-7">
                 <video autoplay loop muted playsinline class="animation-video">
-                <source src="anim2.webm" type="video/webm">
+                <source src="assets/anim2.webm" type="video/webm">
                 Your browser does not support the video tag.
                 </video>
             </div>
