Added img and modals to boxes

--- a/indexGUI.html
+++ b/indexGUI.html
@@ -38,7 +38,7 @@ Whether it's optimizing processes or building responsive web applications, I am 
             </div>
  
             <div class="item item-12">
-
+                <img src="assets/AnirudhPic.png">
             </div>
             <div class="item item-2">
                 <h3>About me</h3>
@@ -87,13 +87,24 @@ While I have a set of preferred tools, I'm always open to exploring the best opt
  
 
             <div class="item item-5">
-                <a href="your-link-here" target="_blank" style="display: block; height: 100%; color: inherit; text-decoration: none;">
                     <h3>Projects</h3>
-                </a>
+                <ul style="list-style-type: none;">
+                    <li>
+                        Mock travel agency website (full stack web app)
+                    </li>
+                    <li>
+                        Data science projects
+                    </li>
+                    <li>
+                        Ai-or-Human game (discord bot and web app)
+                    </li>
+                </ul>
+                <br>
+                <h3> Click here for more </h3>
             </div>
             <div class="item item-6">
-                <a href="your-link-here" target="_blank" style="display: block; height: 100%; color: inherit; text-decoration: none;">
-                    <h3>Link to app</h3>
+                <a href="https://github.com/royanirudd/ai-or-human-web" target="_blank" style="display: block; height: 100%; color: inherit; text-decoration: none;">
+                    <h3>AI or Human game web app</h3>
                 </a>
             </div>
             <div class="item item-7">
@@ -116,14 +127,29 @@ While I have a set of preferred tools, I'm always open to exploring the best opt
             </div>
 
             <div class="item item-10">
-                <a href="your-link-here" target="_blank"style="display: block; height: 100%; color: inherit; text-decoration: none;">
-                    <h3>Discord bot</h3>
+                <a href="https://github.com/royanirudd/Ai-or-human" target="_blank"style="display: block; height: 100%; color: inherit; text-decoration: none;">
+                    <h3>Discord AI or Human bot</h3>
                 </a>
             </div>
             <div class="item item-11" style="font-size: 14px;">
                 <h3>&#169;Designed by Anirudh Roy 2024</h3>
             </div>
     </main>
+        <div id="modal-5" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>More Information about Item 5</h2>
+        <p>This is additional information about Item 5. You can add any content you want here.</p>
+    </div>
+</div>
+
+<div id="modal-8" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>More Information about Item 8</h2>
+        <p>This is additional information about Item 8. You can add any content you want here.</p>
+    </div>
+</div>
     <script src="scriptGUI.js"></script>
 </body>
 </html>
