--- a/indexGUI.html
+++ b/indexGUI.html
@@ -87,7 +87,7 @@ While I have a set of preferred tools, I'm always open to exploring the best opt
  
 
             <div class="item item-5">
-                    <h3>Projects</h3>
+                    <h3>Projects:</h3>
                 <ul style="list-style-type: none;">
                     <li>
                         Mock travel agency website (full stack web app)
@@ -114,7 +114,11 @@ While I have a set of preferred tools, I'm always open to exploring the best opt
                 </video>
             </div>
             <div class="item item-8">
-                <h3>Work experience</h3>
+                <h3>Work experience:</h3>
+                <br>
+                <p>11 months of experience</p>
+                <br>
+                <p>Click here for more info</p>
             </div>
             <div class="item item-9">
                 <div class="color-picker">
@@ -135,21 +139,6 @@ While I have a set of preferred tools, I'm always open to exploring the best opt
                 <h3>&#169;Designed by Anirudh Roy 2024</h3>
             </div>
     </main>
-        <div id="modal-5" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>More Information about Item 5</h2>
-        <p>This is additional information about Item 5. You can add any content you want here.</p>
-    </div>
-</div>
-
-<div id="modal-8" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>More Information about Item 8</h2>
-        <p>This is additional information about Item 8. You can add any content you want here.</p>
-    </div>
-</div>
     <script src="scriptGUI.js"></script>
 </body>
 </html>
